tests/custom/STARIS_2022/operation-type-errors/inverse-type-error/stderr.expected
Error:
    Parser error in file: inverse-type-error.essence Error is:
ValidatorError inverse-type-error.essence:2:39:
  |
2 | such that a = inverse(function(0-->1),function(false-->true))
  |                                       ^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: function int --> int
	Got: function bool --> bool

